--- a/assets/css/sizeguide.css
+++ b/assets/css/sizeguide.css
@@ -13,7 +13,7 @@
   }
 
   .split-left h1{
-    font-size: 20px;
+    font-size: 18px;
     margin: 10px;
   }
   
@@ -88,5 +88,22 @@
     .split-left,.clothing,.footwear {
         flex-direction: column;
         margin: auto;
+    }
+
+    .clothing {
+      margin-top: 370px;
+      text-align: center;
+    }
+
+    .clothing table {
+      margin: auto;
+    }
+
+    .footwear {
+      text-align: center;
+    }
+
+    .footwear table {
+      margin: auto;
     }
   }
